# smartcam

./: .gitignore  CMakeLists.txt
cmake/: FindLive555.cmake
config/: config.yaml
docs/superpowers/plans/: 2026-05-22-per-client-queue-plan.md  2026-05-24-rtsp-audio-rtcp.md  2026-06-17-audio-video-enhance-plan.md
docs/superpowers/specs/: 2026-05-22-per-client-queue-design.md  2026-05-24-rtsp-audio-rtcp-design.md  2026-06-17-audio-video-enhance-design.md
include/smartcam/: version.h
scripts/: bench_latency_wsl.sh  bench_rtsp.sh  bench_rtsp_wsl.sh  download_deps.sh  gen_test_video.sh  measure_e2e_latency.py
src/: main.cpp
src/app/: main_service.cpp  main_service.h
src/common/: config.cpp  config.h  error.h  types.h
src/hal/: camera_hal.cpp  camera_hal.h  i2c_hal.cpp  i2c_hal.h  spi_hal.cpp  spi_hal.h  v4l2_source.cpp  v4l2_source.h  video_file_source.cpp  video_file_source.h
src/middleware/: latest_value.h  message_queue.h  thread_pool.h  timer_manager.h
src/modules/analysis/: intelligent_analysis.cpp  intelligent_analysis.h
src/modules/audio/: audio_capture.cpp  audio_capture.h  audio_processor.cpp  audio_processor.h
src/modules/camera/: camera_capture.cpp  camera_capture.h
src/modules/display/: oled_display.cpp  oled_display.h
src/modules/ota/: ota_manager.cpp  ota_manager.h
src/modules/sensor/: sensor_module.cpp  sensor_module.h
src/modules/streaming/: rtsp_server.cpp  rtsp_server.h
src/modules/video/: video_processor.cpp  video_processor.h
tests/: CMakeLists.txt  test_analysis.cpp  test_config.cpp  test_sensor.cpp
